# GAMES101-Assignment

./: .gitignore  FinalProject.md  README.md
Assignment1/代码框架/: README.md  main.cpp
Assignment2/代码框架/: README.md  main.cpp  rasterizer.cpp
Assignment3/Assignment3/: CMakeLists.txt  README.md  Triangle.hpp  main.cpp  rasterizer.cpp
Assignment4/Assignment4/: README.md
Assignment5/Assignment5/: README.md  Triangle.hpp  Vector.hpp
Assignment6/Assignment6/: BVH.cpp  README.md  Renderer.cpp  Triangle.hpp  main.cpp
Assignment7/Assignment7/: BVH.cpp  Bounds3.hpp  README.md  Renderer.cpp  Scene.cpp  Scene.hpp
FinalProject/部份导出数据/: new_test0.xyz  new_test1.xyz  new_test2.xyz
Homework1/代码框架/: README.md
Homework2/代码框架/: README.md
Homework3/Assignment3/: Texture.hpp  main.cpp
Homework4/Assignment4/: main.cpp
Homework5/Assignment5/: Renderer.cpp
Homework6/Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp
PA7/Assignment7/: Renderer.cpp  Renderer.hpp  Triangle.hpp
assignment8/: README.md
assignment8/src/: rope.cpp  rope.h
